--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
             width: 600px;
             height: 600px;
             position: absolute;
-            left: 500px;
-            top: 100px;
+            left: 50%;
+            top: 50%;
+            margin-top: -300px;
+            margin-left: -300px;
         }
 
         #score {
@@ -24,8 +26,10 @@
         }
 
         .disp {
-            top: 360px;
-            left: 760px;
+            left: 50%;
+            top: 50%;
+            margin-top: -40px;
+            margin-left: -40px;
             position: absolute;
         }
 
@@ -48,17 +52,21 @@
         #svg1 {
             width: 15px;
             height: 600px;
-            position: absolute;
-            top: 100px;
-            left: 480px;
+            position: absolute;    
+            left: 50%;
+            top: 50%;
+            margin-top: -300px;
+            margin-left: -325px;
         }
 
         #svg2 {
             width: 600px;
             height: 25px;
             position: absolute;
-            top: 700px;
-            left: 500;
+            left: 50%;
+            top: 50%;
+            margin-top: 300px;
+            margin-left: -300px;
         }
 
         .rotation-button {
@@ -71,8 +79,10 @@
 
         #rotdiv {
             position: absolute;
-            left: 1150px;
-            top: 625px;
+            left: 50%;
+            top: 50%;
+            margin-top: 270px;
+            margin-left: 400px;
         }
     </style>
 </head>
