--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         #svg1 {
             width: 15px;
             height: 600px;
-            position: absolute;    
+            position: absolute;
             left: 50%;
             top: 50%;
             margin-top: -300px;
@@ -73,14 +73,14 @@
             background-image: url('rotation-button.png');
             background-color: #eee;
             background-size: cover;
-            width: 65px;
-            height: 65px;
+            width: 35px;
+            height: 35px;
         }
 
         #rotdiv {
             position: absolute;
             left: 50%;
-            top: 50%;
+            top: 45%;
             margin-top: 270px;
             margin-left: 400px;
         }
@@ -90,26 +90,28 @@
 <body onload="loading()">
 
     <div onclick="clicked(event)">
-        <svg id="svg1">
-            <text x="0" y="45"></text>
-            <text x="0" y="120"></text>
-            <text x="0" y="195"></text>
-            <text x="0" y="270"></text>
-            <text x="0" y="345"></text>
-            <text x="0" y="420"></text>
-            <text x="0" y="495"></text>
-            <text x="0" y="570"></text>
-        </svg>
-        <svg id="svg2">
-            <text x="35" y="20"></text>
-            <text x="110" y="20"></text>
-            <text x="185" y="20"></text>
-            <text x="260" y="20"></text>
-            <text x="335" y="20"></text>
-            <text x="410" y="20"></text>
-            <text x="485" y="20"></text>
-            <text x="560" y="20"></text>
-        </svg>
+        <div id="svg">
+            <svg id="svg1">
+                <text x="0" y="45"></text>
+                <text x="0" y="120"></text>
+                <text x="0" y="195"></text>
+                <text x="0" y="270"></text>
+                <text x="0" y="345"></text>
+                <text x="0" y="420"></text>
+                <text x="0" y="495"></text>
+                <text x="0" y="570"></text>
+            </svg>
+            <svg id="svg2">
+                <text x="35" y="20"></text>
+                <text x="110" y="20"></text>
+                <text x="185" y="20"></text>
+                <text x="260" y="20"></text>
+                <text x="335" y="20"></text>
+                <text x="410" y="20"></text>
+                <text x="485" y="20"></text>
+                <text x="560" y="20"></text>
+            </svg>
+        </div>
         <div id="board" class="board"></div>
         <div id="coloredSquares">
         </div>
@@ -119,6 +121,8 @@
         </div>
     </div>
     <div id="rotdiv">
+        display coords <input onchange="changeCHB()" type="checkbox" id="coordCHB" checked></input>
+        <br /><br />
         <button class="rotation-button" onclick="rotateBoard()"></button> <span>&nbsp;&nbsp; Orientation: white</span>
     </div>
 </body>
